nma_ws_inc = include_directories('.')

nma_ws_resource_data = files(
  'nma-eap-fast.ui',
  'nma-eap-leap.ui',
  'nma-eap-peap.ui',
  'nma-eap-simple.ui',
  'nma-eap-tls.ui',
  'nma-eap-ttls.ui',
  'nma-ws-802-1x.ui',
  'nma-ws-leap.ui',
  'nma-ws-sae.ui',
  'nma-ws-wep-key.ui',
  'nma-ws-wpa-psk.ui',
)

nma_ws_headers = files(
  'nma-ws-802-1x.h',
  'nma-ws-dynamic-wep.h',
  'nma-ws.h',
  'nma-ws-leap.h',
  'nma-ws-owe.h',
  'nma-ws-sae.h',
  'nma-ws-wep-key.h',
  'nma-ws-wpa-eap.h',
  'nma-ws-wpa-psk.h',
)

nma_ws_sources = files(
  'nma-eap.c',
  'nma-eap-fast.c',
  'nma-eap-leap.c',
  'nma-eap-peap.c',
  'nma-eap-simple.c',
  'nma-eap-tls.c',
  'nma-eap-ttls.c',
  'nma-ws-802-1x.c',
  'nma-ws.c',
  'nma-ws-dynamic-wep.c',
  'nma-ws-helpers.c',
  'nma-ws-leap.c',
  'nma-ws-owe.c',
  'nma-ws-sae.c',
  'nma-ws-wep-key.c',
  'nma-ws-wpa-eap.c',
  'nma-ws-wpa-psk.c',
)
